--- a/daily_practice_problem.ipynb
+++ b/daily_practice_problem.ipynb
@@ -6,7 +6,7 @@
       "name": "daily-practice-problem.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQHDQlGLRzkZu7AQBkPr/5",
+      "authorship_tag": "ABX9TyMOLk58/Lw5I+RU0mlzhPdf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,23 +29,33 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "-WU7uVe9FupI"
+        "id": "6Rfp_RC7HxlG"
       },
       "source": [
-        "print('hello worls!')"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "# Practice Questions (Function)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uWTpd0pRHUdy"
+      },
+      "source": [
+        "##Problem\n",
+        "Write a function that inputs a number and prints the multiplication table of that number.\n",
+        "\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8tl_fp49Gnu3"
+        "id": "g4h-1gz4IBnf"
       },
       "source": [
-        "print('test')"
+        ""
       ],
       "execution_count": null,
       "outputs": []
