--- a/daily_practice_problem.ipynb
+++ b/daily_practice_problem.ipynb
@@ -6,7 +6,8 @@
       "name": "daily-practice-problem.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOLk58/Lw5I+RU0mlzhPdf",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMWmb5nAYBDCYx8EuVy/ThJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +35,7 @@
         "id": "6Rfp_RC7HxlG"
       },
       "source": [
-        "# Practice Questions (Function)"
+        "# Practice Questions"
       ]
     },
     {
@@ -43,8 +44,9 @@
         "id": "uWTpd0pRHUdy"
       },
       "source": [
-        "##Problem\n",
-        "Write a function that inputs a number and prints the multiplication table of that number.\n",
+        "## Function\n",
+        "- Write a function that inputs a number and prints the multiplication table of \n",
+        "that number.\n",
         "\n",
         "\n"
       ]
