--- a/My_Python_Notebook_(Pramod)_I.ipynb
+++ b/My_Python_Notebook_(Pramod)_I.ipynb
@@ -52,17 +52,7 @@
         "MNi6JUwJtQmy",
         "Hi1KpBTrtQm3",
         "q2hgFT3YtQm4",
-        "UcENr85stQm4",
-        "bZJl6fYltQm6",
         "haawEDbqtQm6",
-        "RGoaa4h-tQm7",
-        "4vHafpA9tQm9",
-        "AnalcCq5tQm9",
-        "QkIskM4TtQm_",
-        "RDAgsRYHtQnA",
-        "AhySdnTKtQnA",
-        "8qVQMyMmtQnC",
-        "f9j4BIMhtQnC",
         "MgOnqhtstQnD",
         "IUKQfs2ptQnD",
         "kmzXDjeZtQnE",
@@ -3630,10 +3620,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "HZoBfTRutQm4",
-        "outputId": "ec394ec7-8b08-4058-e450-b1702fdf8710"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4ae3864f-f2df-4b29-9a4f-0d3ed75f043c"
       },
       "source": [
-        "numbers = [1, 2, 3, 4]\n",
+        "numbers = [1, 2, 4, 3]\n",
         "\n",
         "for num in numbers:          #iterating over list\n",
         "    if num == 4:\n",
@@ -3645,14 +3638,13 @@
         "    \n",
         "print(\"Outside of for loop\")"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "1\n",
             "2\n",
-            "3\n",
             "Outside of for loop\n"
           ],
           "name": "stdout"
@@ -3672,7 +3664,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "b9Fq7PVCtQm5",
-        "outputId": "d05b2ae0-8cec-45ce-d2ff-13d2d30961c2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d42763c9-5924-4d44-f209-99a4133bb381"
       },
       "source": [
         "num = int(input(\"Enter a number: \"))                   #convert string to int\n",
@@ -3693,14 +3688,13 @@
         "else:\n",
         "    print(\"{} is a Prime number\".format(num))"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Enter a number: 25\n",
-            "25 is divisible by 5\n",
-            "25 is NOT a Prime number\n"
+            "Enter a number: 23\n",
+            "23 is a Prime number\n"
           ],
           "name": "stdout"
         }
@@ -3710,7 +3704,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "vgujuFAQtQm5",
-        "outputId": "8d2c92ed-b971-4fff-f4d7-64be5bc15c01"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2deeb855-57bf-4fa9-92fa-f411389c0ee6"
       },
       "source": [
         "while True:\n",
@@ -3720,7 +3717,7 @@
         "        break\n",
         "print('thank you')"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -3751,7 +3748,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "P_0A6T9ltQm6",
-        "outputId": "fd6175a6-2671-49e7-f56b-55853565beb0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "94c88996-0bea-40c9-e8df-b46077c86dae"
       },
       "source": [
         "#print odd numbers present in a list\n",
@@ -3764,7 +3764,7 @@
         "else:\n",
         "    print(\"else-block\")"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -3782,7 +3782,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "e_ztzlnTtQm6",
-        "outputId": "4009ad75-b661-46fa-c402-69574091d63f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7fc96b73-da4d-4308-a09d-394a041cc422"
       },
       "source": [
         "while True:\n",
@@ -3796,11 +3799,15 @@
         "        break\n",
         "print('welcome')"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "who are you\n",
+            "ket\n",
+            "heloo ket, what is password\n",
+            "g\n",
             "who are you\n",
             "pky\n",
             "who are you\n",
@@ -3895,14 +3902,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "Nz6QMyHjtQm7",
-        "outputId": "a79cbc57-e5b2-4591-94ee-01748a2f1bf4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8e3d00b9-1e09-4999-f31d-943c6878b9ae"
       },
       "source": [
         "print('may name is:')\n",
         "for i in range(5):\n",
         "    print('pky five time('+str(i)+')')"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -3922,7 +3932,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Jli0IBwWtQm7",
-        "outputId": "4b2782b4-690e-4508-97d2-9c0f435c1dad"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c37de4ef-5e6d-45bb-990d-824e9a55c6a5"
       },
       "source": [
         "print('sum first of 100 number')\n",
@@ -3932,7 +3945,7 @@
         "    s=s+i\n",
         "print(s)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -3977,7 +3990,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "y2sH2fO_tQm8",
-        "outputId": "224623ea-e0fc-4b09-f059-fa3a0cc53600"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6b7db3c0-ff68-4bb3-d7b2-4998e17004f0"
       },
       "source": [
         "print('sum first of n number')\n",
@@ -3990,15 +4006,15 @@
         "    s=s+i\n",
         "print(s)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "sum first of n number\n",
             "enter value of n\n",
-            "6\n",
-            "21\n"
+            "20\n",
+            "210\n"
           ],
           "name": "stdout"
         }
@@ -4008,7 +4024,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "kAmL0FxntQm8",
-        "outputId": "963bc230-e1c8-4b58-adec-739085b938ac"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "84022afd-ac04-4528-bf1e-3b9ad2eaa9f6"
       },
       "source": [
         "print('sum first of 4 number')\n",
@@ -4018,7 +4037,7 @@
         "    s=s+i\n",
         "print(s)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -4048,7 +4067,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "LCHyfXkDtQm9",
-        "outputId": "f10a2978-5e02-491a-e54a-4c94ab4d8e17"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "be9a0da9-8072-4d09-e4ad-fd24cbf63c72"
       },
       "source": [
         "numbers = [1, 2, 3]\n",
@@ -4059,7 +4081,7 @@
         "else:\n",
         "    print(\"no item left in the list\")"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -4077,7 +4099,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hZO1TcKptQm9",
-        "outputId": "26791c7a-f2e4-4ba4-b473-857386598964"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f98f778b-3a10-40a1-9b54-64cd0fe36273"
       },
       "source": [
         "for item in numbers:\n",
@@ -4087,7 +4112,7 @@
         "else:\n",
         "    print(\"no item left in the list\")"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -4117,13 +4142,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "CeMHaLbRtQm-",
-        "outputId": "aca8e6b7-babb-4c63-8b3d-bfc07964c611"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3e8a68f7-44a7-4ca5-afc4-3203a64cc75a"
       },
       "source": [
         "for i in range(12, 16):\n",
         "    print(i)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -4159,13 +4187,16 @@
       "metadata": {
         "scrolled": true,
         "id": "95r1ZKxjtQm-",
-        "outputId": "7add90ec-2a5a-4619-ab4a-0638d35d8bdf"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "60ce95d5-af9f-4be7-cbf0-7ee658091128"
       },
       "source": [
         "for i in range(0, 10, 2):\n",
         "        print(i)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -4201,13 +4232,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "0qcmmkR4tQm_",
-        "outputId": "e0551dc3-c7f7-4e2a-d9c0-42aa91dd174a"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "45192dfe-280a-47a8-89b2-cc3135373693"
       },
       "source": [
         "for i in range(5,-1,-1):\n",
         "    print(i)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -4291,7 +4325,10 @@
           "start_time": "2020-10-25T06:16:50.731046Z"
         },
         "id": "mK17UG_btQnA",
-        "outputId": "254450cc-19b9-4b61-8842-7454487bdc3c"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d5ddda0e-ce97-4405-c229-e381468f5f37"
       },
       "source": [
         "li = ['a', 'b', 'c', 'd']\n",
@@ -4302,7 +4339,7 @@
         "    else:\n",
         "        print(i)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -4333,7 +4370,7 @@
         "else: \n",
         "    print(\"b<a\")"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -4356,23 +4393,26 @@
       "metadata": {
         "scrolled": true,
         "id": "7iJFipyFtQnB",
-        "outputId": "364a3805-3bdd-45ef-9151-d4e10de8e2e3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b26837a9-eecf-41f9-c223-111e64713826"
       },
       "source": [
         "import random\n",
         "for i in range(5):\n",
         "    print(random.randint(1,10))"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "10\n",
-            "10\n",
             "2\n",
-            "3\n",
-            "8\n"
+            "6\n",
+            "10\n",
+            "6\n",
+            "3\n"
           ],
           "name": "stdout"
         }
@@ -4382,7 +4422,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "dq03KnLYtQnB",
-        "outputId": "4979d4da-bfb9-4af4-b197-d7f37ae91e91"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fe87a596-98f9-4f1a-e969-19c6532ce43e"
       },
       "source": [
         "#program for sum of n odd no\n",
@@ -4398,15 +4441,15 @@
         "    \n",
         "print('\\nsum of ('+str(n)+') odd number is=(' +str(s)+ ')')"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "enter the n\n",
-            "3\n",
-            "1+3+5+\n",
-            "sum of (3) odd number is=(9)\n"
+            "5\n",
+            "1+3+5+7+9+\n",
+            "sum of (5) odd number is=(25)\n"
           ],
           "name": "stdout"
         }
@@ -17843,7 +17886,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "6kAneFa3tQp-",
-        "outputId": "eec2d0c0-bc61-4579-d7cc-394e699a391f"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 231
+        },
+        "outputId": "27a8bf5c-25ea-46a3-cd99-63782daecc04"
       },
       "source": [
         "text=pyperclip.paste()\n",
@@ -17852,14 +17899,18 @@
         "    lines[i]='*'+lines[i]\n",
         "    print (lines[i])"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "*Hello world!\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-e308cc115b47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtext\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpyperclip\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpaste\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlines\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlines\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mlines\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'*'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mlines\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlines\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'pyperclip' is not defined"
+          ]
         }
       ]
     },
@@ -17927,7 +17978,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "X-HhLFYBtQp_",
-        "outputId": "1821f398-1520-49d7-aef2-d20c3aa4427c"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4d69636f-9903-4b3e-d4ea-c1e7b8f5fec9"
       },
       "source": [
         "tableData = [['apples', 'oranges', 'cherries', 'banana'],\n",
@@ -17943,7 +17997,7 @@
         "printTable(tableData)    \n",
         "  "
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
