--- a/daily_practice_problem.ipynb
+++ b/daily_practice_problem.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMWmb5nAYBDCYx8EuVy/ThJ",
+      "authorship_tag": "ABX9TyNtISgMeuaiU4B6xe8NB1q9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,6 +61,130 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wNqNSE_4dWRb"
+      },
+      "source": [
+        "## Recursive function\n",
+        "\n",
+        "\n",
+        "*   Write recursive function for HCF \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VQO_iSBcZXGs",
+        "outputId": "00aa55ad-c994-4067-e37f-bfeb287e0ffa"
+      },
+      "source": [
+        "def rHCF(a,b):\n",
+        "  \"\"\"\n",
+        "  this function print HCF via recursion method\n",
+        "  \"\"\"\n",
+        "  s=a if a<b else b\n",
+        "  l=b if a<b else a\n",
+        "  if l%s==0:\n",
+        "    return(s)\n",
+        "  else:\n",
+        "    a=l%s\n",
+        "    b=s\n",
+        "    return(rHCF(a,b))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "the HCF of 25 and 1215 is 5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LWDSOdItfIzF",
+        "outputId": "f069c47f-870a-49c6-ebd4-a436560ab4b6"
+      },
+      "source": [
+        "rHCF(121,33)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BPNOtsZWfhud",
+        "outputId": "79e77641-8695-49ee-97b3-a981553493b4"
+      },
+      "source": [
+        "a=25;b=1215\n",
+        "print(\"the HCF of\", a, \"and\", b ,\"is\", rHCF(a,b))"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "the HCF of 25 and 1215 is 5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "doUztQCIfo9D",
+        "outputId": "e796851c-c8a7-4cd8-8d66-e148da1114ca"
+      },
+      "source": [
+        "print(rHCF.__doc__)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "  this function print HCF via recursion method\n",
+            "  \n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
