--- a/daily_practice_problem.ipynb
+++ b/daily_practice_problem.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNtISgMeuaiU4B6xe8NB1q9",
+      "authorship_tag": "ABX9TyM29JvemPFn7TTXG4LbKe6d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,6 +65,26 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "5U5CjC6YgnwZ"
+      },
+      "source": [
+        "- Write a program to print twin primes less than 1000. If two consecutive odd numbers are both prime then they are known as twin primes. [twin prime](https://en.wikipedia.org/wiki/Twin_prime)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b4pmhyprg3xp"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "wNqNSE_4dWRb"
       },
       "source": [
@@ -98,7 +118,7 @@
         "    b=s\n",
         "    return(rHCF(a,b))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +141,7 @@
       "source": [
         "rHCF(121,33)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +170,7 @@
         "a=25;b=1215\n",
         "print(\"the HCF of\", a, \"and\", b ,\"is\", rHCF(a,b))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +193,7 @@
       "source": [
         "print(rHCF.__doc__)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
