--- a/daily_practice_problem.ipynb
+++ b/daily_practice_problem.ipynb
@@ -6,7 +6,8 @@
       "name": "daily-practice-problem.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO0MEdBiq9Exh4sqskABuOR",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMpqzPkhp7s8799Y7WTZ0S8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +72,7 @@
         "  for i in range(1,11):\n",
         "    print(i,\"* \",a, \"=\",i*a,)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,12 +82,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O4SmxxFTkYoa",
-        "outputId": "f0008d40-6501-475b-c47e-bfe6691d5459"
+        "outputId": "6e456247-1e72-448b-fd26-aebb1e298f17"
       },
       "source": [
         "table(10)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,12 +116,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zzmF0sOYrKfN",
-        "outputId": "ae2e4cfa-d709-4247-8245-3170085bf367"
+        "outputId": "d0b0dac5-aec7-4c64-a5dd-3a6936f1acac"
       },
       "source": [
         "print(table.__doc__)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,7 +188,7 @@
         "\n",
         "  "
       ],
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -197,12 +198,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YG9i-3ej5ImD",
-        "outputId": "1a043763-48e9-4b98-a7aa-6fc99b63038b"
+        "outputId": "f291604c-977a-4074-b011-3841aa8fc18c"
       },
       "source": [
         "print(isPrime.__doc__)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,18 +224,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UqF0Uaba5IeU",
-        "outputId": "a18592f3-5d6f-482b-9c63-6c060e90f014"
+        "outputId": "155d34fc-669d-4ab3-90d2-951466a4b420"
       },
       "source": [
         "print(TwinPrime.__doc__)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "\n",
-            "  this function give twin prime number bellow entred number\n",
+            "  this function give twin prime numbers bellow entred number\n",
             "  \n"
           ],
           "name": "stdout"
@@ -248,12 +249,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pyytAobwscLl",
-        "outputId": "09bcc4a0-5228-4925-9387-3500209f456a"
+        "outputId": "dafbc532-7305-40a1-bb6a-45e1e4f3924f"
       },
       "source": [
         "TwinPrime(1000)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +345,7 @@
         "  print(\"Number of twin prime bellow {}, is {}\".format(x,temp))\n",
         "\n"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -354,12 +355,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nz6tyzfx8O--",
-        "outputId": "b0fd8174-3821-4306-f20c-aa463b4fa841"
+        "outputId": "113e25eb-d411-4283-ac2a-ac65396beb7d"
       },
       "source": [
         "print(listPrime.__doc__)"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,12 +380,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VXnnEomcC5Kk",
-        "outputId": "c8fd3635-42b6-4dcd-a614-da877728ed6b"
+        "outputId": "eaf44a19-150e-4298-b025-b0733bda8d83"
       },
       "source": [
         "print(twinPrime2.__doc__)"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -404,12 +405,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZGAwXSND_Fe0",
-        "outputId": "fe5d7ddb-5078-4235-f619-8b6c72586198"
+        "outputId": "de52bbad-d06a-48d6-98b3-55c4621e5782"
       },
       "source": [
         "twinPrime2(1000)"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,6 +459,373 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "RzgU923UZ6Yo"
+      },
+      "source": [
+        "### Prime factorisation\n",
+        "Write a program to find out the prime factors of a number. Example: prime factors of 56 -2, 2, 2, 7\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kBSbt6Hw43zT"
+      },
+      "source": [
+        "**Algorithm-1**\n",
+        "\n",
+        "---\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K7Gv1rVeZ6AT",
+        "outputId": "bf0f5f33-7de8-4c93-cbe0-603e9a888007"
+      },
+      "source": [
+        "def primeFact(n):\n",
+        "  '''\n",
+        "  this function print list of prime factors for entered numbers\n",
+        "  '''\n",
+        "  if n==1:\n",
+        "    print('no prime factor for 1')\n",
+        "    return\n",
+        "  lst=[]\n",
+        "\n",
+        "  for i in range(2,n):\n",
+        "    while n%i==0:\n",
+        "      lst.append(i)\n",
+        "      n=n//i\n",
+        "\n",
+        "  print('prime factor of are: {}'.format(lst))\n",
+        "\n",
+        "primeFact(44289)"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "prime factor of are: [3, 3, 7, 19, 37]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A4Z_1znl5APk"
+      },
+      "source": [
+        "**Algorithm-2:** More efficient"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xkRnXHUvtBD1",
+        "outputId": "28458f55-b6d6-423b-ae1a-414e07752b43"
+      },
+      "source": [
+        "import math\n",
+        "def factors(num):\n",
+        "  \"\"\"takes a number and prints prime factors of that number\"\"\"\n",
+        "\n",
+        "  if num==1:\n",
+        "    print(\"no prime factors for 1\")\n",
+        "    return\n",
+        "\n",
+        "  factor=[]\n",
+        "  for i in range(2,int(math.sqrt(num))+1):    #we reduce the number of loop\n",
+        "    while num%i==0:\n",
+        "      factor.append(i)\n",
+        "      num=num//i\n",
+        "\n",
+        "  if num!=1:                              #if there are any foctor >sqrt(num) then it will currecnlt in num\n",
+        "    factor.append(num)\n",
+        "  print(\"factors are: {}\".format(factor))\n",
+        "\n",
+        "factors(44289)"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "factors are: [3, 3, 7, 19, 37]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cCpXs83cZ56l",
+        "outputId": "305269ad-08c3-4c28-b4eb-eeecf22f9f3c"
+      },
+      "source": [
+        "factors(9905973)"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "factors are: [3, 7, 11, 19, 37, 61]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ciIfc3Mt4NPE",
+        "outputId": "45349c2f-09d0-4681-cfe1-8820545eefb9"
+      },
+      "source": [
+        "primeFact(9905973)"
+      ],
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "prime factor of are: [3, 7, 11, 19, 37, 61]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GrELeIY8Z5wS",
+        "outputId": "c72cdaf8-02a2-4ef3-af47-69786a1cf3bc"
+      },
+      "source": [
+        "primeFact(1263761079)"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "prime factor of are: [3, 7, 17, 19, 211, 883]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E_y7CTBK5P-8"
+      },
+      "source": [
+        "it took 103 sec for abov number"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bffp6jUq2E6u",
+        "outputId": "7f1aca15-7424-42fe-8bf1-f5808b80e9b3"
+      },
+      "source": [
+        "factors(1263761079)"
+      ],
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "factors are: [3, 7, 17, 19, 211, 883]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V5tb7lP85YW8"
+      },
+      "source": [
+        "it took 1.4 sec, so factor(n) is more efficient."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pFjmz7O-5s3L"
+      },
+      "source": [
+        "### permutation and combination\n",
+        "Write a program to implement these formulae of permutations and combinations.\n",
+        "Number of permutations of n objects taken r at a time: p(n, r) = n! / (n-r)!. Number of combinations of n objects taken r at a time is: c(n, r) = n! / (r!*(n-r)!) = p(n,r) / r!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TOofGFFP7PUH",
+        "outputId": "aba3cb02-af09-45dd-dc70-b767741127c5"
+      },
+      "source": [
+        "def fact(n):\n",
+        "  '''\n",
+        "  return factorial of entered number\n",
+        "  '''\n",
+        "  n=int(n)\n",
+        "  factorial=1\n",
+        "  for i in range(1,n+1):\n",
+        "    factorial*=i\n",
+        "  return factorial\n",
+        "\n",
+        "def p(n,r):\n",
+        "  '''\n",
+        "  return permutation of entered number\n",
+        "  '''\n",
+        "  if n<r:\n",
+        "    print(\"inavlid entry\")\n",
+        "  perm=fact(n)/fact(n-r)\n",
+        "  return perm\n",
+        "\n",
+        "def c(n,r):\n",
+        "  '''\n",
+        "  return combination of entered number\n",
+        "  '''\n",
+        "  if n<r:\n",
+        "    print('invalid')\n",
+        "  \n",
+        "  combi= p(n,r)/fact(r)\n",
+        "  return combi\n",
+        "\n",
+        "n=int(input('enter the value of n :'))   #In python 3, the input() function returns a string.\n",
+        "r=int(input('entet the value of r :'))\n",
+        "print('permutation of entered numbers is {}, and combination is {}'.format(p(n,r),c(n,r)))"
+      ],
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter the value of n :5\n",
+            "entet the value of r :3\n",
+            "permutation of entered numbers is 60.0, and combination is 10.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T8Eu-3RI8MPc",
+        "outputId": "02dcec13-3db3-46dc-e0ff-042f6af9952a"
+      },
+      "source": [
+        "fact(5)"
+      ],
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "120"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 106
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vwmWh0wo8-k_",
+        "outputId": "db288d8f-f0ac-4735-d5db-a08f71c957de"
+      },
+      "source": [
+        "p(5,3)"
+      ],
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 126
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FyzNvnfa9ikL",
+        "outputId": "9b7b0db5-ab64-4f36-b66f-13bcbe21fdc4"
+      },
+      "source": [
+        "c(5,3)"
+      ],
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "wNqNSE_4dWRb"
       },
       "source": [
@@ -487,7 +855,7 @@
         "    b=s\n",
         "    return(rHCF(a,b))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -497,12 +865,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LWDSOdItfIzF",
-        "outputId": "e641ce10-2f49-4969-ae51-e50f96f11556"
+        "outputId": "c6b55225-92c1-4691-db85-87f5064e0de0"
       },
       "source": [
         "rHCF(121,33)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,7 +882,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 13
         }
       ]
     },
@@ -525,13 +893,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BPNOtsZWfhud",
-        "outputId": "c91d4dad-766d-4dca-a741-fc04a12560bd"
+        "outputId": "212b4d70-9ef5-4a17-a1bd-2f01635a1e24"
       },
       "source": [
         "a=25;b=1215\n",
         "print(\"the HCF of\", a, \"and\", b ,\"is\", rHCF(a,b))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,12 +917,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "doUztQCIfo9D",
-        "outputId": "1a045b42-4977-41fd-9984-74c33539096c"
+        "outputId": "17163a16-2b1c-40ab-f328-5647a3e52afa"
       },
       "source": [
         "print(rHCF.__doc__)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,82 +930,6 @@
             "\n",
             "  this function print HCF via recursion method\n",
             "  \n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IWL2JRRrsp1X",
-        "outputId": "2bdcec3e-07ff-4242-e06b-2d552f56893b"
-      },
-      "source": [
-        "int(10**0.5)"
-      ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Bp7m2IO_1xVI",
-        "outputId": "272b23b7-988a-41fe-e1a6-d0809197c8b4"
-      },
-      "source": [
-        "for i in range(2,3):\n",
-        "  print(i)"
-      ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "2\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SPludfpW_n6f",
-        "outputId": "3a620902-003e-458a-eab8-dd86733d8a92"
-      },
-      "source": [
-        "list=[1,2,3,5]\n",
-        "print(list[0],list[1])"
-      ],
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1 2\n"
           ],
           "name": "stdout"
         }
